<resources>
    <string name="app_name">YukWisata</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_peta_web_view">PetaWebView</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sedang_memuat">Sedang Memuat.....</string>
    <string name="action_exit">exit</string>
    <string name="title_activity_list_hotel">Daftar Hotel</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_list_wisata">Obyek Wisata Tuban</string>
    <string name="title_activity_nglirip">Nglirip</string>
    <string name="air_terjun_nglirip_ini_berada_di_pedukuhan_jojogan_desa_mulyo_agung_kecamatan_singgahan_kabupaten_tuban_jawa_timur_untuk_mencapai_air_terjun_nglirip_tuban_para_wisatawan_yang_tidak_menggunakan_mobil_sendiri_bisa_menggunakan_angkot">Air terjun nglirip ini berada di pedukuhan Jojogan Desa Mulyo Agung, Kecamatan Singgahan, kabupaten tuban , Jawa timur. Untuk mencapai air terjun nglirip tuban , para wisatawan yang tidak menggunakan mobil sendiri bisa menggunakan angkot.</string>
    <string name="ayo_wisata">Ayo Wisata</string>
    <string name="title_activity_sunan_bonang">SunanBonang</string>
    <string name="title_activity_makam_bejagung_kidul">Makam Bejagung Kidul</string>
    <string name="title_activity_makam_asmoroqondi">Makam Asmoroqondi</string>
    <string name="title_activity_museum_kambang_putih">Museum Kambang Putih</string>
    <string name="title_activity_perataan">Perataan</string>
    <string name="air_terjun_nglirip">Air Terjun Nglirip</string>
    <string name="title_activity_hotel_mustika">Hotel Mustika</string>
    <string name="_24_jam">24 Jam</string>
    <string name="hotel_ratna">Hotel Ratna</string>
    <string name="hotel_amerta">Hotel Amerta</string>
    <string name="hotel_bali_rich">Hotel Bali Rich</string>
    <string name="hotel_irwan">Hotel Irwan</string>
    <string name="hotel_mustika">Hotel Mustika</string>
    <string name="hotel_slamet">Hotel Slamet</string>
    <string name="title_activity_hotel_bali_rich">Hotel Bali Rich</string>
    <string name="title_activity_hotel_ratna">Hotel Ratna</string>
    <string name="title_activity_hotel_irwan">Hotel Irwan</string>
    <string name="title_activity_rest_area_tuban">Rest Area Tuban</string>
    <string name="title_activity_list_rumah_maka">List Rumah Makan</string>
    <string name="title_activity_rmwahyu_utama">RMWahyuUtama</string>
    <string name="title_activity_rmapung_rahmawati">RM Apung Rahmawati</string>
    <string name="title_activity_rmbajak_laut">RM Bajak Laut</string>
    <string name="title_activity_peta_sunan_bonang">Peta Lokasi Sunan Bonang</string>
    <string name="lihat_peta">Lihat Peta</string>
    <string name="peta_dan_koordinat_gps_6_58_6_quot_s_111_47_38_quot_e">Peta dan Koordinat GPS: 6°58\'6\"S 111°47\'38\"E</string>
    <string name="title_activity_peta_wisata_nglirip">PetaWisataNglirip</string>
    <string name="title_activity_peta_wisata_perataan">PetaWisataPerataan</string>
    <string name="title_activity_peta_wisata_makam_bejagung">Peta Wisata Makam Bejagung</string>
    <string name="title_activity_peta_wisata_musim_kambang_putih">Musim Kambang Putih</string>
    <string name="title_activity_peta_wisata_asmoroqondi">Peta Wisata Asmoroqondi</string>
    <string name="title_activity_peta_rest_area">PetaRestArea</string>
    <string name="title_activity_peta_rmapung_rahmawati">Peta RM Apung Rahmawati</string>
    <string name="title_activity_peta_bajak_laut">Peta RM Bajak Laut</string>
    <string name="title_activity_peta_rmwahyu_utama">Peta RM Wahyu Utama</string>
    <string name="title_activity_peta_hotel_mustika">Peta Hotel Mustika</string>
    <string name="title_activity_hotel_bali_rich2">Hotel Bali Rich Tuban</string>
    <string name="makam_asmoroqondi">Makam Asmoroqondi</string>
    <string name="makam_bejagung_kidul">Makam Bejagung Kidul</string>
    <string name="musium_kambang_putih">Musium Kambang Putih</string>
    <string name="perataan">Perataan</string>
    <string name="hotel_amertaa">Hotel Amerta</string>
    <string name="hotel_tuban_tropis">Hotel Tuban Tropis</string>
</resources>
