<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="id.developer.plk.yukwisata.Nglirip"
    tools:showIn="@layout/activity_nglirip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/air_terjun_nglirip_ini_berada_di_pedukuhan_jojogan_desa_mulyo_agung_kecamatan_singgahan_kabupaten_tuban_jawa_timur_untuk_mencapai_air_terjun_nglirip_tuban_para_wisatawan_yang_tidak_menggunakan_mobil_sendiri_bisa_menggunakan_angkot"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/peta_dan_koordinat_gps_6_58_6_quot_s_111_47_38_quot_e"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/Lihat"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lihat_peta" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
